# home-pi-dashboard

./: .env.example  README.md  pyproject.toml
assets/seasonal/: ATTRIBUTION.md
assets/seasonal/daily/: spring_2026-04-19.json
config/: prayers.json  settings.example.toml  settings.toml
docs/: ARCHITECTURE.md  ROADMAP.md
scripts/: install_pi_app.sh  install_systemd_user_services.sh  run_dashboard.sh  run_on_pi3.sh  update_and_restart_on_pi.sh
src/homehub/: __init__.py  config.py  main.py  qml_app.py
src/homehub/assets/: markets.json
src/homehub/modules/: clock.py  gps.py  weather.py
src/homehub/qml/: Main.qml  SevenSegmentGlyph.qml  SevenSegmentText.qml  WeatherIcon.qml
src/homehub/services/: adhan_audio_service.py  aladhan_client.py  daily_seasonal_image_service.py  gps_service.py  market_price_service.py  prayer_time_service.py  udp_overlay_service.py  weather_service.py
src/homehub/ui/: backgrounds.py  components.py  palette.py  seasonal.py  theme.py
tests/: test_adhan_audio_service.py  test_backgrounds.py  test_config.py  test_daily_seasonal_image_service.py  test_market_price_service.py  test_prayer_time_service.py  test_weather_module.py
