[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-pi-dashboard"
version = "0.1.0"
description = "Modular Raspberry Pi home dashboard"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "Pillow>=10.0.0",
  "PySide6>=6.7.0"
]

[project.scripts]
home-pi-dashboard = "homehub.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
